[UPDATE] 处理PostgreSQL的兼容性，常用功能兼容性已处理完毕